# routelet

./: .gitignore  README.md  pyproject.toml
.dvc/: config
.github/workflows/: ci.yml
Scripts/: gen_ood.py  ingest_samples.py  pull_samples.py  refresh_haiku_baseline.py
data/: agent.jsonl.dvc  augmented.jsonl.dvc  chat.jsonl.dvc  find_action.jsonl.dvc  integration.jsonl.dvc  memory.jsonl.dvc  none.jsonl.dvc
docs/: distillation.md  metrics.md  model.md  serving.md  taxonomy.md
evals/: holdout.jsonl  ood_holdout.jsonl  regression.jsonl  short_commands.jsonl  tool_routing_ood.jsonl
examples/: intents.sample.jsonl  intents.seed.jsonl
experiments/: README.md  run_ood_eval.py  tool_classifier_proto.py  tool_router.py  tools_proto.py
report/: baselines.json  metrics.json  ood_probe.txt  report.py
src/routelet/: __init__.py  augment.py  checkdata.py  data.py  evaluate.py  export_onnx.py  index.html  preprocess.py  serve.py  setfit_baseline.py  teacher.py  train.py  train_setfit.py
tests/: test_augment.py  test_data_validity.py  test_preprocess.py
