[project]
name = "routelet"
version = "0.0.1"
description = "A tiny fine-tuned intent router. Classify text into intents in milliseconds, on-device."
requires-python = ">=3.12"
dependencies = [
    "scikit-learn",
]

[project.optional-dependencies]
train = [
    "transformers",
    "datasets",
    "torch",
]
# Only needed if you build out the optional HTTP endpoint (src/routelet/serve.py).
serve = [
    "fastapi",
    "uvicorn",
    "pydantic",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/routelet"]

[tool.ruff]
line-length = 100
target-version = "py312"
# Throwaway prototypes, not held to the library's lint bar.
extend-exclude = ["experiments"]

[tool.ruff.lint]
select = ["E", "F", "I"]
