[project]
name = "routelet"
version = "0.0.1"
description = "A tiny fine-tuned intent router. Classify text into intents in milliseconds, on-device."
requires-python = ">=3.12"
dependencies = [
    "scikit-learn",
]

[project.optional-dependencies]
train = [
    "transformers",
    "datasets",
    "torch",
]
# Interactive classify playground (src/routelet/serve.py). Also needs the
# `train` extras, since it loads the SetFit model.
serve = [
    "fastapi",
    "uvicorn",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/routelet"]

[tool.ruff]
line-length = 100
target-version = "py312"
# Throwaway prototypes, not held to the library's lint bar.
extend-exclude = ["experiments"]

[tool.ruff.lint]
select = ["E", "F", "I"]
